testsuite/tests/linear/should_fail/LinearLazyPat.stderr

LinearLazyPat.hs:5:3: error:
    • Couldn't match type ‘'Many’ with ‘'One’
        required by a non-linear pattern
    • In the pattern: ~(x, y)
      In an equation for ‘f’: f ~(x, y) = (y, x)
